added variables for font weight

--- a/0x02-CSS_advanced/styles/6-style.css
+++ b/0x02-CSS_advanced/styles/6-style.css
@@ -28,14 +28,9 @@ body {
     font-weight: var(--font-weight-regular);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
-    font-style: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
 }
 
 a {
