added styling for the anchor elements

--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -46,16 +46,16 @@ a:link {
     text-decoration: none;
 }
 
-a:visited{
+a:visited {
     font-style: italic;
 }
 
-a:hover{
+a:hover {
     text-decoration: underline;
 }
 
-a:active{
-    background-color: var(--color-dark-grey);
+a:active {
+    background-color: var(--color-light-grey);
 }
 
 .visually-hidden {
