--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -383,7 +383,7 @@ template {
     --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
-    --nav-item-marginto: 0 0 3rem 0;
+    --nav-item-margin: 0 0  3rem 0;
     --nav-item-link-hover: var(--color-primary);
 }
 
@@ -488,7 +488,7 @@ a:active {
     text-align: center;
 }
 
-.nav-item{
+.nav .nav-item{
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
